infra: no script tag parameters needed

--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -67,7 +67,7 @@
     "scripts": [
       {
         "file": "bundle.js",
-        "parameter": "type='module'"
+        "parameter": ""
       }
     ]
   },
