--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -31,7 +31,7 @@
       "organizationUrl": "https://huprocess.com"
     }
   ],
-  "image": "screenshot.png",
+  "image": "wcs-logo.png",
   "searchTags": [
     "testing",
     "tools"
