--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "devDependencies": {
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
+    "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "style-loader": "^2.0.0",
     "web-components-loader": "^0.1.2",
     "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start": "...",
     "build": "webpack --mode production",
+    "server": "node server.js",
     "lint": "...",
     "test": "...",
     "build:cdn": "stencil build --docs --config stencil.config-cdn.ts"
