--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./:/code
     working_dir: /code
-    command: sh -c "test -d node_modules || npm install; npm run server"
+    command: sh -c "test -d node_modules || npm install; npm run start"
     ports:
-      - "8999:3000"
+      - "8999:8080"
     tty: true
