category-filter, showradius (#14)
* temporary removed minimization

* fixed correspondecy between wcs-manifest.json and web component
attributes

* re-build dist after merge

* addes map markers to files[]

* showradius

* category-filter

* update dist using build

--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -88,6 +88,17 @@
       "search.css.map",
       "strings.js",
       "theme.css",
+      "poi-types.json",
+      "bundle.js",
+      "map_markers_Anderes.png",
+      "map_markers_Essen_Trinken.png",
+      "map_markers_Gesch_fte_und_Dienstleister.png",
+      "map_markers_Kultur_Sehensw_rdigkeiten.png",
+      "map_markers_Mobilit_t.png",
+      "map_markers_Sommer.png",
+      "map_markers_Wellness_Entspannung.png",
+      "map_markers_Winter.png",
+      "strings.js",
       "times-solid.svg"
     ],
     "scripts": [
@@ -130,7 +141,7 @@
       {
         "key": "radius",
         "type": "text",
-        "label": "Map radius (m)",
+        "label": "Map search radius (m)",
         "required": false,
         "options": {
           "default": "500000"
@@ -151,24 +162,103 @@
         }
       },
       {
-        "key": "categories",
-        "type": "multiselect",
-        "label": "Categories to show",
+        "key": "showradius",
+        "type": "select",
+        "label": "Show search radius on map",
         "required": false,
         "options": {
           "values": [
-            "All categories",
-            "Winter",
-            "Wellness Entspannung",
-            "Verkehr und Transport",
-            "Sommer",
-            "Mobilitaet",
-            "Kultur und Sehenswuerdigkeiten",
-            "Geschaefte und Dienstleister",
-            "Essen Trinken",
-            "Anderes"
+            "false",
+            "true"
           ],
-          "default": "All categories"
+          "default": "false"
+        }
+      },
+      {
+        "key": "category-filter",
+        "type": "multiselect",
+        "label": "Categories/Subcategories to show",
+        "required": false,
+        "options": {
+          "values": [
+            "",
+            "anderes",
+            "anderes/allergiefreier urlaub",
+            "anderes/aufstiegsanlagen",
+            "anderes/familienurlaub",
+            "anderes/guides schulen",
+            "anderes/klettertour",
+            "anderes/kulturzentren und theater",
+            "anderes/ohne zuordnung",
+            "anderes/parks und grünanlagen",
+            "anderes/sagen",
+            "anderes/spiel und sportanlagen",
+            "anderes/stadtrundgang",
+            "anderes/verleihe",
+            "anderes/weitere kultur und sehenswürdigkeiten",
+            "essen trinken",
+            "essen trinken/weinkellereien",
+            "geschäfte und dienstleister",
+            "geschäfte und dienstleister/dienstleister",
+            "geschäfte und dienstleister/geschäfte",
+            "geschäfte und dienstleister/gesundheit",
+            "geschäfte und dienstleister/nachtleben und unterhaltung",
+            "geschäfte und dienstleister/öffentliche einrichtungen",
+            "kultur sehenswürdigkeiten",
+            "kultur sehenswürdigkeiten/architektur",
+            "kultur sehenswürdigkeiten/bergwerke",
+            "kultur sehenswürdigkeiten/burgen schlösser",
+            "kultur sehenswürdigkeiten/kirchen klöster",
+            "kultur sehenswürdigkeiten/museen",
+            "kultur sehenswürdigkeiten/naturparkhäuser",
+            "kultur sehenswürdigkeiten/sehenswerte plätze",
+            "mobilität",
+            "mobilität/bushaltestellen",
+            "mobilität/carsharing",
+            "mobilität/e-bike ladestation",
+            "mobilität/e-tankstellen ladestationen",
+            "mobilität/fahrradbox",
+            "mobilität/parkplätze",
+            "mobilität/tankstellen autogas",
+            "mobilität/tankstellen benzin diesel",
+            "mobilität/tankstellen methan",
+            "mobilität/tankstellen wasserstoff",
+            "mobilität/taxi, mietwagen mit fahrer, bus",
+            "mobilität/weitere verkehr und transport",
+            "mobilität/zugbahnhöfe",
+            "sommer",
+            "sommer/angeln fischen",
+            "sommer/badeseen freibäder",
+            "sommer/bergsteigen",
+            "sommer/freizeit erlebnis",
+            "sommer/golf",
+            "sommer/klettern",
+            "sommer/laufen fitness",
+            "sommer/paragleiten",
+            "sommer/radfahren radtouren",
+            "sommer/radverleih",
+            "sommer/reiten",
+            "sommer/wandern",
+            "sommer/wassersport",
+            "wellness entspannung",
+            "wellness entspannung/therme wasserwelten",
+            "wellness entspannung/wellnessbehandlungen",
+            "winter",
+            "winter/eisklettern",
+            "winter/eislaufen",
+            "winter/langlaufen",
+            "winter/pferdeschlittenfahrten",
+            "winter/rodeln",
+            "winter/schneeschuhwandern",
+            "winter/skigebiete",
+            "winter/skirundtouren pisten",
+            "winter/skischulen skiverleih",
+            "winter/skitouren",
+            "winter/snowparks",
+            "winter/weihnachtsmärkte",
+            "winter/winterwandern"
+          ],
+          "default": ""
         }
       },
       {
