--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -41,56 +41,56 @@
   "dist": {
     "basePath": "dist",
     "files": [
-      "ActivityPOIComponent.css",
-      "ActivityPOIComponent.css.map",
-      "all.css",
-      "atoms.css",
       "bundle.js",
-      "categories.css",
-      "categories.css.map",
-      "category_icons_Anderes.png",
-      "category_icons_Essen_Trinken.png",
-      "category_icons_Gesch_fte_und_Dienstleister.png",
-      "category_icons_Kultur_Sehensw_rdigkeiten.png",
-      "category_icons_Mobilit_t.png",
-      "category_icons_Mobilitaet.png",
-      "category_icons_Sommer.png",
-      "category_icons_Verkehr_und_Transport.png",
-      "category_icons_Wellness_Entspannung.png",
-      "category_icons_Winter.png",
-      "chevron-up-solid.svg",
-      "envelope-solid.svg",
-      "exclamation-triangle-solid.svg",
-      "fa-solid-900.eot",
-      "fa-solid-900.svg",
-      "fa-solid-900.ttf",
-      "fa-solid-900.woff",
-      "fa-solid-900.woff2",
-      "file-alt-solid.svg",
-      "id-card-solid.svg",
-      "index.html",
-      "info-circle-solid.svg",
-      "itemVisualizer.css",
-      "itemVisualizer.css.map",
-      "map.css",
-      "map.css.map",
       "map_markers_Anderes.png",
-      "map_markers_Culture_and_attractions.svg",
-      "map_markers_Essen_Trinken.png",
-      "map_markers_Gesch_fte_und_Dienstleister.png",
-      "map_markers_Kultur_Sehensw_rdigkeiten.png",
-      "map_markers_Mobilit_t.png",
+      "category_icons_Sommer.png",
+      "itemVisualizer.css.map",
       "map_markers_Sommer.png",
-      "map_markers_Wellness_Entspannung.png",
-      "map_markers_Winter.png",
-      "phone-alt-solid.svg",
-      "poi-types.json",
-      "search-solid.svg",
-      "search.css",
+      "chevron-up-solid.svg",
       "search.css.map",
       "strings.js",
+      "category_icons_Verkehr_und_Transport.png",
+      "map_markers_Culture_and_attractions.svg",
+      "category_icons_Gesch_fte_und_Dienstleister.png",
+      "categories.css.map",
+      "phone-alt-solid.svg",
+      "poi-types.json",
+      "category_icons_Mobilitaet.png",
+      "index.html",
+      "envelope-solid.svg",
       "theme.css",
-      "times-solid.svg"
+      "all.css",
+      "search-solid.svg",
+      "id-card-solid.svg",
+      "fa-solid-900.woff",
+      "map_markers_Kultur_Sehensw_rdigkeiten.png",
+      "itemVisualizer.css",
+      "map_markers_Gesch_fte_und_Dienstleister.png",
+      "map.css",
+      "search.css",
+      "category_icons_Essen_Trinken.png",
+      "category_icons_Winter.png",
+      "category_icons_Wellness_Entspannung.png",
+      "fa-solid-900.ttf",
+      "fa-solid-900.svg",
+      "map_markers_Essen_Trinken.png",
+      "map.css.map",
+      "exclamation-triangle-solid.svg",
+      "map_markers_Wellness_Entspannung.png",
+      "atoms.css",
+      "ActivityPOIComponent.css",
+      "category_icons_Kultur_Sehensw_rdigkeiten.png",
+      "category_icons_Anderes.png",
+      "ActivityPOIComponent.css.map",
+      "fa-solid-900.eot",
+      "map_markers_Mobilit_t.png",
+      "category_icons_Mobilit_t.png",
+      "map_markers_Winter.png",
+      "categories.css",
+      "fa-solid-900.woff2",
+      "times-solid.svg",
+      "file-alt-solid.svg",
+      "info-circle-solid.svg"
     ],
     "scripts": [
       {
