Use odh-activity-poi as web component tag

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "activity-poi-component",
+  "name": "odh-activity-poi",
   "private": true,
   "devDependencies": {
     "copy-webpack-plugin": "^7.0.0",
