--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -100,7 +100,7 @@
     ]
   },
   "configuration": {
-    "tagName": "activity-poi",
+    "tagName": "odh-activity-poi",
     "options": [
       {
         "key": "lat",
