--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,7 @@
-name: ci webcomp-activity-poi
+# version 1.0
+name: CI
 
-on:
-  push:
-    branches: [ master, development ]
-    paths:
-      - "!README.md"
-  pull_request:
-    branches: [ master, development ]
-    paths:
-      - "!README.md"
-      
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: push
 
 jobs:
   build:
@@ -20,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '12'
+          node-version: '16.x'
           cache: 'npm'
       - name: install
         run: npm install
