--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -3,6 +3,7 @@
   "description": "It is a web component that can be integrated in other software (for example websites) to show the activities and point of interests of South Tyrol. They are shown on a map and they can be filtered based on the category or a search term. Each point of interest/activity has a corresponding marker on the map and its details are displayed when it is clicked on it.",
   "descriptionAbstract": "A web component to show activities and point of interests of South Tyrol.",
   "license": "AGPL-3.0-or-later",
+  "repositoryUrl": "https://github.com/noi-techpark/webcomp-activity-poi", 
   "copyrightHolders": [
     {
       "name": "NOI",
