--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -45,53 +45,26 @@
       "bundle.js",
       "map_markers_Anderes.png",
       "category_icons_Sommer.png",
-      "itemVisualizer.css.map",
       "map_markers_Sommer.png",
-      "chevron-up-solid.svg",
-      "search.css.map",
       "strings.js",
       "category_icons_Verkehr_und_Transport.png",
       "map_markers_Culture_and_attractions.svg",
       "category_icons_Gesch_fte_und_Dienstleister.png",
-      "categories.css.map",
-      "phone-alt-solid.svg",
       "poi-types.json",
       "category_icons_Mobilitaet.png",
       "index.html",
-      "envelope-solid.svg",
-      "theme.css",
-      "all.css",
-      "search-solid.svg",
-      "id-card-solid.svg",
-      "fa-solid-900.woff",
       "map_markers_Kultur_Sehensw_rdigkeiten.png",
-      "itemVisualizer.css",
       "map_markers_Gesch_fte_und_Dienstleister.png",
-      "map.css",
-      "search.css",
       "category_icons_Essen_Trinken.png",
       "category_icons_Winter.png",
       "category_icons_Wellness_Entspannung.png",
-      "fa-solid-900.ttf",
-      "fa-solid-900.svg",
       "map_markers_Essen_Trinken.png",
-      "map.css.map",
-      "exclamation-triangle-solid.svg",
       "map_markers_Wellness_Entspannung.png",
-      "atoms.css",
-      "ActivityPOIComponent.css",
       "category_icons_Kultur_Sehensw_rdigkeiten.png",
       "category_icons_Anderes.png",
-      "ActivityPOIComponent.css.map",
-      "fa-solid-900.eot",
       "map_markers_Mobilit_t.png",
       "category_icons_Mobilit_t.png",
-      "map_markers_Winter.png",
-      "categories.css",
-      "fa-solid-900.woff2",
-      "times-solid.svg",
-      "file-alt-solid.svg",
-      "info-circle-solid.svg"
+      "map_markers_Winter.png"
     ],
     "scripts": [
       {
